--- a/index.css
+++ b/index.css
@@ -1,12 +1,16 @@
 /* ==============================
    Global Styles
 ============================== */
+
+
+/* --- Reset --- */
 * {
-  box-sizing: border-box;
+  box-sizing: bordr-box;
   margin: 0;
   padding: 0;
 }
 
+/* --- Typography & Layout --- */
 body {
   font-family: 'Inter', sans-serif;
   color: #222;
@@ -17,18 +21,26 @@ body {
 
 /* Reusable container */
 .container {
+  width: 90%;
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 20px;
 }
 
+.container.center {
+  text-align: center;
+}
+
+
+
+
 /* ==============================
    Navbar
 ============================== */
 .navbar {
-  background: #fff;
+  background-color: #fff;
   border-bottom: 1px solid #eee;
-  padding: 12px 0;
+  padding: 15px 0;
   position: sticky;
   top: 0;
   z-index: 50;
@@ -38,13 +50,14 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  width: 90%;
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 20px;
 }
 
 .logo {
-  height: 25px;
+  height: 20px;
 }
 
 .nav-links {
@@ -58,37 +71,44 @@ body {
   color: #333;
   font-weight: 500;
   transition: color 0.3s ease;
+  margin-left: 20px;
+  font-size: 18px;
 }
 
 .nav-links a:hover {
   color: #387ed1;
+  border-bottom: 2px solid #2962ff;
 }
 
 .menu-icon {
-  display: none;
+  /* display: none; */
   font-size: 24px;
   cursor: pointer;
+  margin-left: 20px;
 }
+
+
+
 
 /* ==============================
    Hero Section
 ============================== */
 .hero {
   text-align: center;
-  padding: 60px 20px;
+  padding: 45px 20px;
 }
 
 .dashboard-img {
   max-width: 100%;
   height: auto;
   margin-bottom: 30px;
-  max-height: 45vh;
+  max-height: 50vh;
 }
 
 .hero h1 {
   font-size: 42px;
   margin-bottom: 16px;
-  font-weight: 600;
+  font-weight: 500;
 }
 
 .hero p {
@@ -110,9 +130,15 @@ body {
 }
 
 .cta-button:hover {
-  background-color: #2a65b9;
+  background-color: #104590;
+  /* background-color: #000; */
+  /* color: white; */
   transform: translateY(-2px);
+  
 }
+
+
+
 
 /* ==============================
    Trust Section
@@ -122,7 +148,7 @@ body {
   align-items: center;
   justify-content: space-between;
   gap: 40px;
-  padding: 60px 20px;
+  padding: 50px 20px;
   max-width: 1200px;
   margin: 0 auto;
 }
@@ -146,7 +172,7 @@ body {
 
 .trust-text p {
   font-size: 18px;
-  color: #555;
+  color: #555555;
   margin-top: 6px;
 }
 
@@ -163,6 +189,7 @@ body {
 .trust-visual {
   flex: 1;
   text-align: center;
+  max-width: 600px;
 }
 
 .trust-visual img {
@@ -175,7 +202,7 @@ body {
 .trust-visual-btn {
   display: flex;
   justify-content: center;
-  gap: 20px;
+  gap: 60px;
   margin-top: 30px;
 }
 
@@ -187,8 +214,12 @@ body {
 }
 
 .trust-visual-btn a:hover {
-  transform: scale(1.1);
+  transform: scale(1.05);
+  border-bottom: 2px solid #2962ff;
 }
+
+
+
 
 /* ==============================
    News Section
@@ -198,31 +229,36 @@ body {
   justify-content: center;
   align-items: center;
   padding: 40px 20px;
+  /* border: 1px solid black; */
 }
 
 #press-logo {
-  max-width: 90%;
+  max-width: 100%;
   height: auto;
 }
+
+
+
 
 /* ==============================
    Price Section
 ============================== */
 .price-section {
   display: flex;
-  /* align-items: flex-start; */
   align-items: center;
   justify-content: space-between;
   gap: 40px;
   max-width: 1200px;
   margin: 0 auto;
-  padding: 60px 20px;
+  padding: 50px 20px;
 }
 
 .price-text {
   flex: 1;
-  max-width: 500px;
-  text-align: left;
+  max-width: 600px;
+  text-align: center;
+  /* border: 1px solid black; */
+  padding: 20px;
 }
 
 .price-text h2 {
@@ -256,7 +292,7 @@ body {
 
 .price-visual-btn {
   display: flex;
-  /* justify-content: center; */
+  justify-content: center;
   gap: 20px;
   margin-top: 30px;
 }
@@ -270,7 +306,9 @@ body {
 
 .price-visual-btn a:hover {
   transform: scale(1.1);
+  border-bottom: 2px solid #2962ff;
 }
+
 
 
 
@@ -284,11 +322,12 @@ body {
   gap: 60px;
   max-width: 1200px;
   margin: 0 auto;
-  padding: 60px 20px;
+  padding: 50px 20px;
 }
 
 .education-visual {
   flex: 1;
+  max-width: 600px;
 }
 
 .education-visual img {
@@ -336,6 +375,218 @@ body {
   border-bottom: 2px solid #2962ff;
 }
 
+
+
+
+/* ==============================
+   Action
+============================== */
+
+.action-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+  margin: 40px auto;
+  max-width: 1200px;
+  padding: 50px 20px;
+  /* border: 1px solid black; */
+}
+
+.action-section h2 {
+  font-size: 32px;
+  font-weight: 600;
+  margin-bottom: 12px;
+}
+
+.action-section p {
+  font-size: 18px;
+  color: #555;
+  line-height: 1.6;
+}
+
+
+
+
+/* ==============================
+   Footer
+============================== */
+.footer {
+  background-color: #fff;
+  border-top: 1px solid #eee;
+  color: #555;
+  font-size: 14px;
+  padding-top: 50px;
+  line-height: 1.6;
+  /* border: 2px solid black; */
+}
+
+.footer-top {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 20px;
+  padding: 20px 40px;
+  border-bottom: 1px solid #eee;
+  /* border: 2px solid black; */
+}
+
+.footer-brand {
+  flex: 1 1 200px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  /* border: 2px solid black; */
+}
+
+.footer-logo {
+  height: 20px;
+  margin-bottom: 15px;
+}
+
+.social-icons {
+  display: flex;
+  gap: 12px;
+  margin-top: 12px;
+  align-items: center;
+  justify-content: center;
+}
+
+.social-icons a {
+  color: #555;
+  font-size: 24px;
+  transition: color 0.3s ease;
+}
+
+.social-icons a:hover {
+  color: #2962ff;
+}
+
+.footer-columns {
+  flex: 3 1 700px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+  align-items: center;
+  justify-content: center;
+  /* border: 1px solid black; */
+}
+
+.footer-col {
+  text-align: left;
+}
+
+.footer-col h4 {
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 10px;
+  color: #333;
+}
+
+.footer-col a {
+  display: block;
+  color: #555;
+  text-decoration: none;
+  margin-bottom: 6px;
+  transition: color 0.3s ease;
+}
+
+.footer-col a:hover {
+  color: #2962ff;
+}
+
+.footer-bottom {
+  margin-top: 40px;
+  padding-top: 10px;
+  color: #777;
+  font-size: 13px;
+  text-align: left;
+  max-width: 1100px;
+  margin: 0 auto;
+  line-height: 1.8;
+  /* border: 2px solid black; */
+}
+
+.footer-bottom p {
+  margin-bottom: 10px;
+}
+
+.footer-bottom a {
+  color: #2962ff;
+  text-decoration: none;
+}
+
+.footer-bottom a:hover {
+  text-decoration: underline;
+}
+
+.footer-links {
+  margin: 15px;
+  /* border: 2px solid black; */
+}
+
+
+.footer-links ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  list-style: none;
+  gap: 15px;
+}
+
+.footer-links a {
+  color: #555;
+  font-size: 13px;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.footer-links a:hover {
+  border-bottom: 2px solid #333;
+}
+
+
+
+
+
+
+/* =================================
+ Responsive Styles
+================================= */
+@media (max-width: 992px) {
+  .footer-top {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .footer-columns {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .footer-col {
+    text-align: center;
+  }
+}
+
+@media (max-width: 600px) {
+  .footer-columns {
+    grid-template-columns: 1fr;
+    gap: 20px;
+  }
+
+  .social-icons {
+    justify-content: center;
+  }
+}
+
+
+
+
+
+
+
+
 /* Responsive */
 @media (max-width: 992px) {
   .education-section {
@@ -356,61 +607,6 @@ body {
     justify-content: center;
   }
 }
-
-
-
-
-
-
-
-/* ==============================
-   Action
-============================== */
-
-.action-section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 30px;
-  padding: 30px auto;
-  margin: 40px auto;
-}
-
-.action-section p {
-  font-size: 18px;
-  color: #555;
-  line-height: 1.6;
-}
-
-.action-section h2 {
-  font-size: 32px;
-  font-weight: 600;
-  margin-bottom: 12px;
-}
-
-.action-section a:hover {
-  background-color: #222;
-  color: #fff;
-}
-
-
-
-
-/* ==============================
-   Footer
-============================== */
-.footer {
-  text-align: center;
-  padding: 10px;
-  color: #666;
-  font-size: 14px;
-  border-top: 1px solid #eee;
-  margin-top: 50px;
-}
-
-
-
-
 
 
 
